Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return list(map(lambda term: term_output(term, input_value), ))"
+    "    return list(map(lambda term: term_output(term, x_value), list_of_terms))"
    ]
   },
   {
