--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    outlist(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "    output_at = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
     "    return "
    ]
   },
