Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    output_at = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
-    "    return "
+    "    return sum()"
    ]
   },
   {
