Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,27 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    output_at = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
-    "    return sum()"
+    "    return sum(output_at)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[27, -11]"
+       "16"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
