--- a/index.ipynb
+++ b/index.ipynb
@@ -3279,6 +3279,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
+    "    delta = d\n",
     "    return "
    ]
   },
